Spacing fix to visualizer

--- a/components/visualizer.module.sass
+++ b/components/visualizer.module.sass
@@ -1,8 +1,11 @@
+@import '/styles/variables.sass'
+  
 .visualizer
   width: 100%
   overflow: hidden
 
   *
+    font-family: $font_mono
     font-size: 0.8rem
     color: #8dc927
 
@@ -11,6 +14,3 @@
 
   .visualizer---row
     pointer-events: none
-
-  .visualizer---row-container
-    font-size: 14px
