--- a/components/widget.module.sass
+++ b/components/widget.module.sass
@@ -106,6 +106,10 @@
       position: absolute
       top: 0
       left: 0
+  &[data-feed="audio"]
+    .scroll
+      padding-top: 10px
+      padding-bottom: 10px
   &[data-feed="terminal"]
     .scroll
       position: absolute
